WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208054
REGRESSION(
r257072
): MotionMark | Mac | -10%
https://bugs.webkit.org/show_bug.cgi?id=208054
Summary
REGRESSION(r257072): MotionMark | Mac | -10%
Antti Koivisto
Reported
2020-02-21 07:28:41 PST
With rAF and slow scripts suspended functions may pile up in RunLoop.
Attachments
patch
(2.81 KB, patch)
2020-02-21 08:42 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2020-02-21 07:30:09 PST
<
rdar://problem/59664582
>
Antti Koivisto
Comment 2
2020-02-21 08:42:09 PST
Created
attachment 391403
[details]
patch
Geoffrey Garen
Comment 3
2020-02-21 09:17:31 PST
Comment on
attachment 391403
[details]
patch r=me
WebKit Commit Bot
Comment 4
2020-02-21 09:51:44 PST
Comment on
attachment 391403
[details]
patch Clearing flags on attachment: 391403 Committed
r257142
: <
https://trac.webkit.org/changeset/257142
>
WebKit Commit Bot
Comment 5
2020-02-21 09:51:46 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug