REGRESSION(r257072): MotionMark | Mac | -10% https://bugs.webkit.org/show_bug.cgi?id=208054 <rdar://problem/59664582>

Reviewed by Geoffrey Garen.

With rAF and slow scripts, suspended functions may pile up in RunLoop because every cycle does a rendering update.

* wtf/RunLoop.cpp:
(WTF::RunLoop::performWork):
(WTF::RunLoop::suspendFunctionDispatchForCurrentCycle):

Don't suspend if there are already pending suspended functions.

* wtf/RunLoop.h:


Canonical link: https://commits.webkit.org/221029@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257142 268f45cc-cd09-0410-ab3c-d52691b4dbfc