Source/WTF/wtf/RunLoop.h
@@ -185,6 +185,7 @@ private:
     Lock m_functionQueueLock;
     Deque<Function<void()>> m_functionQueue;
     bool m_isFunctionDispatchSuspended { false };
+    bool m_hasSuspendedFunctions { false };
 
 #if USE(WINDOWS_EVENT_LOOP)
     static LRESULT CALLBACK RunLoopWndProc(HWND, UINT, WPARAM, LPARAM);
